Implemented support for the text shaping algorithm that fixes rendering more advanced languages such as Arabic. 
Fixed: a rare case when the Row.AutoItem does not calculate properly the width of its content.
Fixed: the QuestPDF Previewer does not work with content-rich documents.